# haskell_trial_by_fire

./: .gitignore  AGENTS.md  ASSESSMENT.md  CONTRIBUTING.md  COURSE.md  CURRICULUM_PRINCIPLES.md  PROJECT_HANDOVER.md  README.md  ROADMAP.md  cabal.project  fourmolu.yaml  hlint.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
boss-fights/B001-expression-language/: CHANGELOG.md  DESIGN.md  MUTATION_PLAN.md  PERFORMANCE_PLAN.md  PRIVATE_TEST_PLAN.md  PUBLIC_TEST_PLAN.md  README.md  REVISIT_PLAN.md  assessment.yaml  b001-expression-language.cabal
boss-fights/B001-expression-language/benchmark/: Main.hs
boss-fights/B001-expression-language/src/Apprentice/B001/: Eval.hs  Parser.hs  Pretty.hs  Syntax.hs
boss-fights/B001-expression-language/test-public/: Main.hs
curriculum/: BOSS_FIGHT_ROADMAP.md  CONCEPT_RECURRENCE.md  PHASE_DEPENDENCIES.md  README.md
docs/: README.md
exercises/M001/: CHANGELOG.md  DESIGN.md  MUTATION_PLAN.md  PERFORMANCE_PLAN.md  PRIVATE_TEST_PLAN.md  PUBLIC_TEST_PLAN.md  README.md  REVISIT_PLAN.md  assessment.yaml  m001.cabal
exercises/M001/benchmark/: Main.hs
exercises/M001/src/Apprentice/M001/: Exercise.hs
exercises/M001/test-public/: Main.hs
progress/: README.md  completed-modules.md  journal.md  learner-profile.md  review-schedule.md  weaknesses.md
prompts/: README.md
support/: README.md
templates/: ASSESSMENT_METADATA_TEMPLATE.yaml  ASSESSMENT_REPORT_TEMPLATE.md  DESIGN_TEMPLATE.md  MODULE_CHANGELOG_TEMPLATE.md  MODULE_README_TEMPLATE.md  MUTATION_PLAN_TEMPLATE.md  PERFORMANCE_PLAN_TEMPLATE.md  PRE_ATTEMPT_AUDIT_TEMPLATE.md  PRIVATE_TEST_PLAN_TEMPLATE.md  (+2 more)
(+145 files in other folders)
