cabal-version: 3.0
name: m001
version: 0.1.0.0
build-type: Simple

library
  exposed-modules: Apprentice.M001.Exercise
  hs-source-dirs: src
  build-depends: base >=4.16 && <5
  default-language: Haskell2010

test-suite public
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-public
  build-depends:
    base >=4.16 && <5,
    m001,
    tasty >=1.4 && <1.6,
    tasty-hunit >=0.10 && <0.11,
    tasty-quickcheck >=0.10 && <0.12
  default-language: Haskell2010

benchmark public-benchmark
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmark
  build-depends: base >=4.16 && <5, m001
  default-language: Haskell2010
